--- a/ysqlsh/simple-maven-ybm/pom.xml
+++ b/ysqlsh/simple-maven-ybm/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.yugabyte.demos</groupId>
-    <artifactId>yugabyte-simple-java-app</artifactId>
+    <artifactId>simple-maven-ybm</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <name>simple-maven-ybm</name>
     <dependencies>
         <dependency>
             <groupId>com.yugabyte</groupId>
@@ -17,8 +17,8 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <build>
